--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,16 @@ version: '3'
 
 services:
   nginx:
-    image: nginx:1.22-alpine
+    image: nginx:latest
     ports:
       - "8080:80"
     volumes:
-      - ./:/code
+      - ./:/var/ng/html
       - ./nginx.conf:/etc/nginx/nginx.conf
   php:
     build: .
     volumes:
-      - ./:/code
+      - ./:/var/ng/html
   mysql:
     image: mysql:8.2
     environment:
@@ -29,6 +29,26 @@ services:
       MYSQL_ROOT_PASSWORD: root # ⬅︎ 🚨
     ports:
       - "8081:80"
+  mongo:
+    image: mongo
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: 1234
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8083:80
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: 1234
+      ME_CONFIG_MONGODB_URL: mongodb://root:1234@mongo:27017/
+      ME_CONFIG_BASICAUTH: "false"
+  php-fpm:
+    image: php8.3-fpm-mongo
+    volumes:
+      - ./:/var/ng/html
 
 volumes:
   data:
