--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ http {
         listen 80;
         server_name localhost;
 
-        root /code/public;
+        root /var/ng/html;
         index index.php;
 
         location / {
